<resources>

    <string name="app_name">人物播放器</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="chinaname">【中文名】:</string>
  <string name="foreignname">【别　名】:</string>
  <string name="nationality">【国　籍】:</string>
<string name="constellation">【星　座】:</string>
    <string name="birth">【出生日期】:</string>
    <string name="birthplace">【出生地】:</string>
    <string name="profession">【职业】:</string>
    <string name="graduate">【毕业学校】:</string>
    <string name="intro">【人物简介】:</string>
    <string name="load_error">请求当前页面数据失败，请稍候重试或者继续!</string>
	<string name="lastPage">已经是最后一页了</string>
	<string name="firstPage">已经是第一页了</string>
	<string name="title_opus">【相关作品】:</string>
	<string name="sound_movie_select">sound_movie_select</string>
    <string name="sound_page_change">sound_page_change</string>
    <string name="confirm">确定</string>
    <string name="pmt">提示</string>
    <string name="nosdcard">没有找到sd卡，请插入sd卡再进行下载完成更新。</string>
    <string name="downErro">下载出现异常，请重试</string>
    <string name="downComplete">下载完成</string>
    <string name="start_download">开始下载文件！</string>
    <string name="cancle">取消</string>
    <string name="menu_tishi">按Search键检索筛选</string>
    <string name="submenu_type">性别</string>
    <string name="submenu_rank">地区</string>
    <string name="submenu_decade">职业</string>
    <string name="submenu_area">地区</string>
    <string name="submenu_sort">类别</string>
    <string name="serach_menu">关键字查询</string>
    <string name="search">搜索 :</string>
    <string name="search_hint">请输入电影名称</string>
    <string name="uncollect">是否取消收藏?</string>
        <string name="collect">收藏</string>
    <string name="collect_cancel">取消收藏</string>
     <string name="collect_cancel_success">取消收藏成功!</string>
     <string name="collect_cancel_fail">取消收藏失败!</string>
     <string name="collect_success">收藏成功!</string>
     <string name="back">返回</string>
     <string name="downing">您正在下载中,请稍等...</string>
     <string name="newversion">发现新版本,是否更新?</string>
</resources>