<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2.0dip"
        android:src="@drawable/fliter_line_hor" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="300.0dip"
        android:background="@drawable/movie_main_menu"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/filter_type"
            android:layout_width="195.0dip"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="1.0dip"
                android:layout_height="fill_parent"
                android:scaleType="fitXY"
                android:src="@drawable/filter_line_ver" />

            <LinearLayout
                android:layout_width="193.0dip"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="193.0dip"
                    android:layout_height="60.0dip"
                    android:gravity="center"
                    android:text="@string/submenu_type"
                    android:textColor="#00ccff"
                    android:textSize="30.0sp" />

                <ImageView 
                    android:layout_width="193.0dip"
                    android:layout_height="1.0dip"
                    android:src="@drawable/fliter_line_hor" />

                <ListView
                    android:id="@+id/filter_list_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:divider="#ff000000" />
            </LinearLayout>

            <ImageView
                android:layout_width="1.0dip"
                android:layout_height="fill_parent"
                android:scaleType="fitXY"
                android:src="@drawable/filter_line_ver" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/filter_rank"
            android:layout_width="195.0dip"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="193.0dip"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="193.0dip"
                    android:layout_height="60.0dip"
                    android:gravity="center"
                    android:text="@string/submenu_rank"
                    android:textColor="#00ccff"
                    android:textSize="30.0sp" />

                <ImageView
                    android:layout_width="193.0dip"
                    android:layout_height="1.0dip"
                    android:src="@drawable/fliter_line_hor" />

                <ListView
                    android:id="@+id/filter_list_rank"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:divider="#ff000000" />
            </LinearLayout>

            <ImageView
                android:layout_width="1.0dip"
                android:layout_height="fill_parent"
                android:scaleType="fitXY"
                android:src="@drawable/filter_line_ver" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/filter_decade"
            android:layout_width="195.0dip"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="193.0dip"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="193.0dip"
                    android:layout_height="60.0dip"
                    android:gravity="center"
                    android:text="@string/submenu_decade"
                    android:textColor="#00ccff"
                    android:textSize="30.0sp" />

                <ImageView
                    android:layout_width="193.0dip"
                    android:layout_height="1.0dip"
                    android:src="@drawable/fliter_line_hor" />

                <ListView
                    android:id="@+id/filter_list_decade"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:divider="#ff000000" />
            </LinearLayout>

            <ImageView
                android:layout_width="1.0dip"
                android:layout_height="fill_parent"
                android:scaleType="fitXY"
                android:src="@drawable/filter_line_ver" />
        </LinearLayout>
<!-- 
        <LinearLayout
            android:id="@+id/filter_area"
            android:layout_width="195.0dip"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="193.0dip"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="193.0dip"
                    android:layout_height="60.0dip"
                    android:gravity="center"
                    android:text="@string/submenu_area"
                    android:textColor="#00ccff"
                    android:textSize="30.0sp" />

                <ImageView
                    android:layout_width="193.0dip"
                    android:layout_height="1.0dip"
                    android:src="@drawable/fliter_line_hor" />

                <ListView
                    android:id="@+id/filter_list_area"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:divider="#ff000000" />
            </LinearLayout>

            <ImageView
                android:layout_width="1.0dip"
                android:layout_height="fill_parent"
                android:scaleType="fitXY"
                android:src="@drawable/filter_line_ver" />
        </LinearLayout> -->

<!--         <LinearLayout
            android:id="@+id/filter_sort"
            android:layout_width="195.0dip"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="193.0dip"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="193.0dip"
                    android:layout_height="60.0dip"
                    android:gravity="center"
                    android:text="@string/submenu_sort"
                    android:textColor="#00ccff"
                    android:textSize="30.0sp" />

                <ImageView
                    android:layout_width="193.0dip"
                    android:layout_height="1.0dip"
                    android:src="@drawable/fliter_line_hor" />

                <ListView
                    android:id="@+id/filter_list_sort"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:divider="#ff000000" />
            </LinearLayout> 

            <ImageView
                android:layout_width="1.0dip"
                android:layout_height="fill_parent"
                android:scaleType="fitXY"
                android:src="@drawable/filter_line_ver" />
        </LinearLayout> -->

        <LinearLayout
            android:id="@+id/filter_submit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" 
                android:gravity="center_horizontal"
                >
                    <Button 
                      android:id="@+id/btn_submit_type"
                       android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                           android:background="@drawable/btn_movie_cofirm_selector"
                            android:layout_marginTop="120dp"
                      />
                    <Button 
                        android:id="@+id/btn_toSearch"
                        android:layout_width="180dp"
                        android:layout_height="60dp"
                        android:textSize="25sp"
                        android:layout_marginLeft="50dip"
                        android:text="@string/serach_menu"
                        android:layout_marginTop="120dp"
                       android:textColor="@color/white"
                        android:background="@drawable/btn_search_guan_selector"
                        />
              

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>